syntax = "proto3";

package ganymede.services.device_config;

// ConfigService configuration object
message DeviceConfigServiceConfig {
    message MongoDBConfig {
        string host = 1;
        string user = 2;
        string password = 3;
        string database = 4;
    }

    MongoDBConfig mongodb = 1;
}